# natten-mps

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release-pypi.yml  release-testpypi.yml
benchmarks/: bench.py  bench_new_features.py  cross_bench.py  cross_bench_isolated.py  cross_bench_v3.py  dispatch_overhead.py  gqa_overhead.py  nanobind_vs_compile_shader.py  new_features_mps_metal.json  new_features_perf.md  new_features_results.json
docs/: gap_analysis.md
src/natten_mps/: __init__.py  _torch_ops.py  functional.py  merge.py  support_matrix.py
src/natten_mps/_core/: __init__.py  _metal_shaders.py  _nanobind_ext.cpp  inverse_maps.py  metal.py  nanobind.py  ops.py  pure.py
src/natten_mps/_core/shaders/: natten_nb_1d.metal
src/natten_mps/autograd/: __init__.py  _factory.py  na1d.py  na2d.py  na3d.py
src/natten_mps/compat/: __init__.py  v014.py  v015.py  v017.py  v020.py
src/natten_mps/extras/allin1/: __init__.py  _metal_shaders.py  functional.py  metal.py  reference_impl.py
src/natten_mps/nn/: __init__.py  na1d.py  na2d.py  na3d.py
src/natten_mps/utils/: __init__.py  params.py  window.py
tests/: test_autograd.py  test_autograd_3d.py  test_backends.py  test_backward_parity.py  test_compat_for_version.py  test_compat_gradients.py  test_compat_v014.py  test_compat_v015.py  test_compat_v017.py  test_compat_v020.py  test_extras_allin1.py  test_extras_backward.py  test_functional.py  test_functional_3d.py  test_functional_3d_expanded.py  test_fused_simd.py  test_gradcheck_functional.py  test_metal_backend.py  test_na1d.py  test_na2d.py  test_na3d.py  test_nanobind_backend.py  test_new_features.py  test_nn_module_grad.py  test_shift_semantics.py  test_split_ops_grad.py  test_support_matrix.py  test_upstream_parity.py  test_validation_errors.py  test_varlen_na1d.py  test_varlen_na2d.py  test_varlen_na3d.py
